# regtech-cleanup-api

./: Dockerfile  README.md  data.json  pyproject.toml
.github/workflows/: tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2b31b8edbcc1a684_config_py.html  z_2b31b8edbcc1a684_main_py.html  z_4f16ddb7c6900677_engine_py.html  z_81b35de7210de74b_cleanup_processor_py.html  z_81b35de7210de74b_file_handler_py.html  z_81b35de7210de74b_validation_py.html  z_92fc9dfe9f812e9a_filing_repo_py.html  z_92fc9dfe9f812e9a_institution_repo_py.html  z_92fc9dfe9f812e9a_submission_repo_py.html  z_a164b88509a3e199_cleanup_py.html  z_a164b88509a3e199_filing_cleanup_py.html  z_a164b88509a3e199_institution_cleanup_py.html
src/regtech_cleanup_api/: .env.local  .env.tamplate  config.py  main.py
src/regtech_cleanup_api/entities/engine/: engine.py
src/regtech_cleanup_api/entities/repos/: filing_repo.py  institution_repo.py  submission_repo.py  user_fi_repo.py
src/regtech_cleanup_api/routers/: cleanup.py  filing_cleanup.py  institution_cleanup.py  user_fi_cleanup.py
src/regtech_cleanup_api/services/: cleanup_processor.py  file_handler.py
tests/api/: conftest.py
tests/api/routers/: test_filing_cleanup.py  test_institution_cleanup.py
tests/app/: test_config.py
tests/entities/: conftest.py
tests/entities/repos/: test_filing_repo.py  test_institution_repo.py  test_submission_repo.py
tests/repos/: test_user_fi_repo.py
tests/routers/: test_user_fi_cleanup.py
tests/services/: test_cleanup_processor.py
