[tool.poetry]
name = "regtech-cleanup-api"
version = "0.1.0"
description = "Regtech Cleanup API"
authors = ["jmcguffee <justin.mcguffee@cfpb.gov>"]
readme = "README.md"
packages = [{ include = "regtech_cleanup_api", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.12,<4"
sqlalchemy = "^2.0.31"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}
sbl-filing-api = {git = "https://github.com/cfpb/sbl-filing-api.git"}
regtech-user-fi-management = {git = "https://github.com/cfpb/regtech-user-fi-management.git"}
boto3 = "^1.34.149"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14"


[tool.poetry.group.linters.dependencies]
ruff = "0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


env = [
  "DB_SCHEMA=main",
  "DB_USER=user",
  "DB_PWD=user",
  "DB_HOST=localhost:5432",
  "DB_NAME=filing",
  "INST_DB_SCHEMA=main",
  "INST_DB_USER=user",
  "INST_DB_PWD=user",
  "INST_DB_HOST=localhost:5432",
  "INST_DB_NAME=fi",
  "KC_URL=http://localhost",
  "KC_REALM=",
  "KC_ADMIN_CLIENT_ID=",
  "KC_ADMIN_CLIENT_SECRET=",
  "KC_REALM_URL=http://localhost",
  "AUTH_CLIENT=",
  "AUTH_URL=http://localhost",
  "TOKEN_URL=http://localhost",
  "CERTS_URL=http://localhost",
  "FS_UPLOAD_CONFIG__PROTOCOL=file",
  "FS_UPLOAD_CONFIG__ROOT=../upload",
]
